# telegram-cleaner

./: .gitignore  LICENSE  README.md  RUSSIAN_LAWS.md  cleaner_session.session-journal  pyproject.toml  pytest.ini
src/telegram_cleaner/: actions.py  ai_agent.py  cache.example.json  cleaner.py  config.py  constants.py  error_handlers.py  export.py  formatting.py  logging_setup.py  main.py  message_processor.py  report.py  translations.py  ui.py
tests/: conftest.py  test_sonnet.py
